Fetch preferences for person
